# ss24_HomomorphicPolynomialPublicKeyCryptography

./: LICENSE  README.md  c_cpp_properties.json  setup.py
hppk/: CMakeLists.txt  makefile
hppk/include/: hppk.hpp  utils.hpp
src/: hppk.cpp  main.cpp  utils.cpp
src/wrapper/: encryption.py
